server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aetherv
  labels:
    name: aetherv
